--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,33 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-analytics.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyCYgZaEuLYa7DqrU6Y9CvOvMKo2EJwXW1A",
+      authDomain: "castor-6dc45.firebaseapp.com",
+      projectId: "castor-6dc45",
+      storageBucket: "castor-6dc45.appspot.com",
+      messagingSenderId: "606968123431",
+      appId: "1:606968123431:web:3778b4b6d6c56637e9fe02",
+      measurementId: "G-Q19SF5CHDR"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
